modifier's icons toggle mismatch (visibility, render) #44162

Closed
opened 2015-03-28 09:11:41 +01:00 by Kris Slazinski · 6 comments

System Information
Operating system and graphics card: OSX Yosemite 10.10.2, NVIDIA GeForce 320M 256 MB

Blender Version
Broken: 2.74 RC4
Worked: (optional)

Short description of error
When you toggle icons for visibility/rendering of modifiers in Outliner, icons for visibility/rendering in Modifiers panel don't update.

Exact steps for others to reproduce the error
Based on a (as simple as possible) attached .blend file with minimum amount of steps

  • Default scene.
  • Add Modiefier to Cube
  • Toggle visibility or render icon for this modifier in Outliner
  • icons in the modifier window stay the same, resulting in this:

Zrzut_ekranu_2015-03-28_o_08.58.43.png

P.s. Toggling with different method is OK. When you right-click in Outliner on

**System Information** Operating system and graphics card: OSX Yosemite 10.10.2, NVIDIA GeForce 320M 256 MB **Blender Version** Broken: 2.74 RC4 Worked: (optional) **Short description of error** When you toggle icons for visibility/rendering of modifiers in Outliner, icons for visibility/rendering in Modifiers panel don't update. **Exact steps for others to reproduce the error** Based on a (as simple as possible) attached .blend file with minimum amount of steps - Default scene. - Add Modiefier to Cube - Toggle visibility or render icon for this modifier in Outliner - icons in the modifier window stay the same, resulting in this: ![Zrzut_ekranu_2015-03-28_o_08.58.43.png](https://archive.blender.org/developer/F155691/Zrzut_ekranu_2015-03-28_o_08.58.43.png) P.s. Toggling with different method is OK. When you right-click in Outliner on
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @mallow

Added subscriber: @mallow
Author

P.s. Toggling with different method is OK. When you right-click in Outliner on a modifier and change visibility/render from there, icons in the modifier panel are updated.

How can I edit description of my bug submission?

P.s. Toggling with different method is OK. When you right-click in Outliner on a modifier and change visibility/render from there, icons in the modifier panel are updated. How can I edit description of my bug submission?
Bastien Montagne self-assigned this 2015-03-29 11:35:45 +02:00

This issue was referenced by 70d9c01325

This issue was referenced by 70d9c013257906d3e894907b92e693d1ccebd7fd

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 70d9c01325.

Closed by commit 70d9c01325.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44162
No description provided.