Fix T44162: Outliner: modifier's icons toggle update issue

Use same notifier for button callback as the one used in matching outliner operator...